gradleのタスクでアプリを起動できるようにした #44