@@ -137,3 +137,10 @@ task versionSet(type: Copy) {
 }
 
 compileJava.dependsOn(['versionSet'])
+
+task runApp(type: Exec) {
+  commandLine 'java',
+    '--module-path', './lib/javafx-sdk-11.0.2/lib',
+    '--add-modules', 'javafx.base,javafx.controls,javafx.swing,javafx.graphics,javafx.fxml',
+    '-jar', 'build/libs/tkfm-dev.jar'
+}
